Update NLP - Bumble reviews.ipynb

--- a/NLP - Bumble reviews.ipynb
+++ b/NLP - Bumble reviews.ipynb
@@ -563,7 +563,7 @@
    "id": "12354cd3",
    "metadata": {},
    "source": [
-    "**Interesting that in the positive reviews we can see dating app specific phrases appearing. Eg. \"no bots\", \"good app\", \"not fake\". Also \"laid\" LOL**\n",
+    "**Interesting that in the positive reviews we can see dating app specific phrases appearing. Eg. \"no bots\", \"good app\", \"not fake\".",
     "\n",
     "**Also funny that one of the worst terms is \"Facebook\". I think this might merit checking, since it's not immediately apparent to me why this would carry such a negative weight**"
    ]
